# FinanceAnalyzer

./: .flake8  .pre-commit-config.yaml  .pydocstyle  README.md  dodo.py  pyproject.toml  requirements-dev.txt  setup.cfg
FinanceAnalyzer/: Controller.py  Model.py  View.py  __init__.py  __main__.py
docs/: api.rst  conf.py  index.rst  quickstart.rst
po/ru/LC_MESSAGES/: FinanceAnalyzer.po
tests/: __init__.py
