[metadata]
name = FinanceAnalyzer
version = 0.0.0
url = https://github.com/SergeyChernykh/FinanceAnalyzer
author = vladimirtelepov, SergeyChernykh
author_email = s9160605122@gmail.com, vladimir.telepov@rambler.ru
description = Exam project for PythonDevelopment2021 course
long_description = file: README.md
project_urls =
    Bug Tracker = https://github.com/SergeyChernykh/FinanceAnalyzer/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = FinanceAnalyzer
include_package_data = True
install_requires =

[options.entry_points]
console_scripts =
    FinanceAnalyzer = FinanceAnalyzer.Controller:main

[options.package_data]
FinanceAnalyzer = */*/FinanceAnalyzer.mo